# Capstone

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  docker-compose.yml
RoboDad/: CMakeLists.txt
RoboDad/docker/db/: Dockerfile  init.sql
RoboDad/docker/llama/: Dockerfile  config.yaml  entrypoint.sh
RoboDad/frontend/public/: activity.html  chat.html  complete-profile.html  dashboard.html  delete_chat_session.html  delete_earning.html  delete_expense.html  delete_user_settings.html  earning.html  earnings.html  edit_chat_session.html  edit_earning.html  edit_expense.html  edit_user_settings_information.html  edit_user_settings_login.html  expense.html  expenses.html  import_plaid.html  login.html  new_chat_session.html  new_earning.html  new_expense.html  register.html  settings.html  signup.html  transaction_details.html  transactions.html  user_chat_session_details.html  user_chat_sessions.html  user_dashboard.html  user_settings.html  user_settings_information.html  user_settings_login.html
RoboDad/frontend/public/css/: chat.css  chat_sessions.css  dashboard.css  global.css  login.css  register.css  settings.css  transactions.css
RoboDad/frontend/public/js/: amount_totals.js  bulk_delete.js  chat.js  chat_session_active.js  delete_chat_session.js  dropdowns.js  edit_chat_session.js  edit_user_settings_login.js  import_csv.js  import_plaid.js  login.js  pfc_cascade.js  register.js  transactions_view.js
RoboDad/includes/crow/: crow_all.h
RoboDad/includes/server/: Server.h
RoboDad/includes/server/presentation/: AppType.h
RoboDad/includes/sharedKernel/application/: IDto.h  IUseCase.h
RoboDad/includes/sharedKernel/domain/: IAggregateRoot.h  IEntity.h  IIdValueObject.h  IValueObject.h
RoboDad/includes/sharedKernel/infrastructure/: DateUtils.h  IDatabaseConnection.h  IHttpServer.h  IRepository.h
RoboDad/includes/sharedKernel/presentation/: IController.h  IMiddleware.h
RoboDad/includes/sharedKernel/utilities/: UuidGenerator.h
RoboDad/sharedKernel/domain/: IAggregateRoot.h  IEntity.h
RoboDad/sharedKernel/infrastructureServices/: ChatHistoryRepository.h  ExpenseRepository.h  UserRepository.h
RoboDad/sharedKernel/infrastructureServices/apiClient/: ILlmClient.h  IPlaidClient.h  IPromptBuilder.h  PlaidTransactionData.h
RoboDad/sharedKernel/infrastructureServices/http/: IHttpServer.h
RoboDad/sharedKernel/infrastructureServices/persistance/: BudgetRepository.h  ChatHistoryRepository.h  ExpenseRepository.h  IInfrastructureService.h  IRepository.h  PromptRepository.h  SystemInstructionsRepository.h  UserRepository.h
RoboDad/sharedKernel/infrastructureServices/security/: IJwtService.h  IPasswordHasher.h
RoboDad/sql/: migration_pfc_categories.sql  schema.sql
RoboDad/src/: CMakeLists.txt  Server.cpp  main.cpp
RoboDad/src/application/: CMakeLists.txt
RoboDad/src/application/ai/: GetBudgetFeedback.cpp
RoboDad/src/application/auth/: LoginUser.cpp  RegisterUser.cpp
RoboDad/src/application/budgets/: GetBudgetStatus.cpp  SetBudgetGoal.cpp
RoboDad/src/application/chatSession/: CreateChatSession.cpp  DeleteChatSession.cpp  GetChatHistory.cpp  GetChatSession.cpp  ListChatSessions.cpp  SendChatMessage.cpp  UpdateChatSession.cpp
RoboDad/src/application/expenses/: AddExpense.cpp  ListExpenses.cpp
RoboDad/src/application/persona/: CreatePersona.cpp  DeletePersona.cpp  GetPersona.cpp  ListPersonas.cpp  UpdatePersona.cpp
RoboDad/src/application/transaction/: CreateTransaction.cpp  DeleteTransaction.cpp  GetTransaction.cpp  ImportPlaidTransactions.cpp  ListTransactions.cpp  ListTransactionsByCategory.cpp  UpdateTransaction.cpp
RoboDad/src/application/user/: GetUserProfile.cpp  UpdateUserPassword.cpp  UpdateUserProfile.cpp
RoboDad/src/domain/: CMakeLists.txt
RoboDad/src/domain/aggregateRoots/: ChatSession.cpp  User.cpp
RoboDad/src/domain/budget/: BudgetGoal.cpp  BudgetGoal.hpp
RoboDad/src/domain/entities/: ChatMessage.cpp  PlaidItem.cpp  Transaction.cpp
RoboDad/src/domain/finance/: Finance.cpp  Finance.hpp  FinanceEnum.hpp
RoboDad/src/domain/llm/: ChatHistory.cpp  ChatHistory.hpp  Prompt.cpp  Prompt.hpp  SystemInstructions.cpp  SystemInstructions.hpp
RoboDad/src/domain/referenceEntities/: Country.cpp  Currency.cpp  EmploymentStatus.cpp  Language.cpp  LlmPersona.cpp  MessageSender.cpp  PfcDetailedCategory.cpp  PfcPrimaryCategory.cpp  TransactionCategory.cpp
RoboDad/src/domain/services/: BudgetEvaluationService.hpp
RoboDad/src/domain/user/: EmploymentStatus.hpp  PersonalInfo.cpp  PersonalInfo.hpp  User.cpp  User.hpp
RoboDad/src/domain/valueObjects/: ChatMessageContent.cpp  ChatSessionDescription.cpp  TransactionAmount.cpp  TransactionDescription.cpp  UserInformation.cpp  UserLogin.cpp
RoboDad/src/infrastructure/: CMakeLists.txt
RoboDad/src/infrastructure/ai/: LlamaClient.cpp  OpenAIClient.cpp  PromptBuilder.cpp
RoboDad/src/infrastructure/apiClient/: ApiClient.cpp
RoboDad/src/infrastructure/config/: AppConfig.cpp
RoboDad/src/infrastructure/http/: HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
RoboDad/src/infrastructure/persistence/: DatabaseConnection.cpp
RoboDad/src/infrastructure/security/: JwtService.cpp  PasswordHasher.cpp
RoboDad/src/presentation/: CMakeLists.txt
RoboDad/src/presentation/controllers/: ActivityController.cpp  ActivityController.h  AiController.cpp  AiController.h  AuthController.cpp  AuthenticationController.cpp  AuthenticationController.h  ChatController.cpp  ChatController.h  DashboardController.cpp  DashboardController.h  EarningsController.cpp  EarningsController.h  HomeController.cpp  (+10 more)
RoboDad/tests/: CMakeLists.txt
RoboDad/tests/application/: AuthUseCaseTests.cpp  BudgetUseCaseTests.cpp  ExpenseUseCaseTests.cpp  ImportPlaidTransactionTests.cpp  PlaidLinkTests.cpp  TransactionUseCaseTests.cpp
RoboDad/tests/domain/: BudgetGoalTests.cpp  ChatTests.cpp  FinanceTests.cpp  ReferenceEntityTests.cpp  UserTests.cpp
RoboDad/tests/infrastructure/: HttpRequestTests.cpp  HttpResponseTests.cpp  JwtServiceTests.cpp  PasswordHasherTests.cpp  PromptBuilderTests.cpp
(+370 files in other folders)
